@@ -1,4 +1,4 @@
-#!/bin/sh
+#! /bin/sh
 # test to check that -f parameter fails properly.
 set -e
 if ./dsh -recho -M -f ${srcdir}/tests/nonexistent.file ; then
