@@ -1,5 +1,5 @@
-#!/bin/sh
-# test to check that -m parameter checking is right.
+#! /bin/sh
+# test to check that -f parameter checking is right.
 set -e
 [ "`./dsh -recho -M -f ${srcdir}/tests/list.file -f ${srcdir}/tests/list.file `" = \
 "d: d
