@@ -1,4 +1,4 @@
-#!/bin/sh
+#! /bin/sh
 # test to check that -m parameter checking is right.
 set -e
 [ "`./dsh -M -recho -m a,b,c,c,d `" = "\
