@@ -1,4 +1,4 @@
-#!/bin/sh
+#! /bin/sh
 echo test to check that unknown parameter checking is right.
 set -e
 if ./dsh -recho --unknown-parameter; then
