@@ -1,5 +1,9 @@
 2002-09-23  Junichi Uekawa  <dancer@debian.org>
 
+	* Makefile.am (TESTS): add it to the tests list.
+
+	* tests/param-i.sh: new test to check whether the -i option works.
+
 	* tests/param-cn4.sh: use ${bindir} variable, because full path of dsh changes
 
 	* Makefile.am (TESTS_ENVIRONMENT): specify bindir=$(bindir) for use.
